* Report on any combination of business reporting units (up to one per class)

Erik H is Erik Huelsmann
Chris T is Chris Travers
Steven M is Steven Marshall
Havard S is Havard Sorli

Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.42
* Fix for missing emails when emailing orders/quotations (1073, Chris T)

Changelog for 1.3.41
* Fix for invalid ref when entering payment  (John Locke)

Changelog for 1.3.40
* Updated nginx configuration (Pongracz I)
* GL account search now will search within descriptions for matches (Chris T)
* Printing without an invoice number now errors instead of increments (Chris T)
* Fixed internal server error using cash/payment (Chris T)
* Fixed #1133 (FX rate changed after selecting part/service) (Pongracz I)
* Fixed #1078 (Don't populate all empty projects automatically) (Pongracz I)
* Fixed #1139 (Vendor can show up as default customer in sales order,
confusing...) (Pongracz I)
* fixes cogs qty/allocated type mismatch (Chris T)
* Fixed manual tax invoices not reversing properly (Chris T, 1134)

Chris T is Chris Travers
Pongracz I is Pongracz Istvan

Changelog for 1.3.39
* Fixed Internal Server Error clicking through ar/ap report (Chris T, 1022)
* Fixed internal server error deleting part (Chris T, 1027)
* Fixed Internal server error saving part with all vendor rows (Chris T, 1028)
* Fixed display of weight on parts list with comma decimal sep (Chris T, 1030)
* Fixed pricelist pdf column widths all equal (Chris T, 1037)
* Added support for zero-downtime upgrades (Chris T)
* Fixed clicking through COA does not show future transactions (Chris T, 1044)
* Fixed unable to partially pay or receive when negative due (Chris T, 1045)
* Fixed encoding for templates when edited through web (Chris T, 1077)
* Fixed customer/vendor dropdown resetting on update (Chris T, 1072)

Chris T is Chris Travers
Robert C is Robert Clay

Changelog for 1.3.38